# TidyLLM

./: .gitattributes  .gitignore  1-enterprise.py  2-developer.py  3-demo.py  4-api_.txt  ACTIVE_FILES_MANIFEST.json  ARCHITECTURE.md  CLEANUP_PLAN.md  CLI_DOCUMENTATION.md  COMPREHENSIVE_CODE_ANALYSIS.md  CREDENTIAL_FLOW_FIXES.md  CREDENTIAL_MANAGEMENT_DONT_BREAK_THIS.md  CRITICAL_CALLS_THAT_WORK.md  CRITICAL_CREDENTIAL_CONSIDERATIONS.md  DEBUG_FLAGS_GUIDE.md  DOCUMENTATION_CHANGES.md  DOMAIN_RAG_HIERARCHY_DOCUMENTATION.md  ECOSYSTEM_DEVELOPMENT_GUIDE.md  ECOSYSTEM_INTEGRATION_COMPLETE.md  ECOSYSTEM_TECHNICAL_REFERENCE.md  ECOSYSTEM_USAGE_GUIDE.md  FLOW_README.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  MANIFEST.in  MLFLOW_EXPERIMENT_GUIDE.md  MasterDemos.html  Next_Phase_Agentic_Flows.md  ONBOARDING_PACKAGE_SUMMARY.md  ORPHAN_FILES_ANALYSIS.json  PACKAGE_SUCCESS_SUMMARY.md  PDF_CHAT_GUIDE.md  QA_TEST_RUNNER_GUIDE.md  QUICK_START.md  README.md  README_AFTER.html  README_AFTER.md  SIMPLE_QA_README.md  SOP_DOMAIN_RAG_STRATEGY.md  (+79 more)
.claude/: settings.local.json
.github/: CODEOWNERS
.streamlit/: config.toml
admin/: config_manager.py  corporate_safe_credentials.py  corporate_settings.yaml  corporate_usm_plugin.py  credential_loader.py  development_settings.yaml  proposed_settings.yaml  read_the_room.py  refresh_settings.py  setup_root_path.py  staging_settings.yaml
boss_demo_evidence/: demo_tracking_1757051424.json
cleanlab-notebooks/: bigquery_dataset.ipynb  data_annotation_label_studio.ipynb  document_data_quickstart.ipynb
compliance/: CLAUDE.md  README.md
config/: embedding_config_manager.py
corporate/: detector.py  usm_wrapper.py  validator.py
cross_domain_comparisons/: checklist_vs_sop_20250905_115712.json  checklist_vs_sop_summary_20250905_115712.md
docs/: CLEAR_ARCHITECTURE_LABELS.md  GATEWAY_ARCHITECTURE_ANALYSIS.md  MCP_IMPLEMENTATION_GUIDE.md  MCP_INTEGRATION_ARCHITECTURE.md
domain/: value_objects.py
domain_rag_system/: demo.py  manifest.json
domain_reports/: cross_domain_report_20250905_111705.json  cross_domain_summary_20250905_111705.md  domain_report_model_validation_20250905_111705.csv  domain_report_model_validation_20250905_111705.json
drop_zones/: README.md  config.yaml  start.py
embedding/: faiss_vector_manager.py  titan_adapter.py
examples/: 01_temperature_routing.py  02_complete_workflow.py  README.md  api_examples_2.py  api_examples_3.py  final_real_demo.py  real_api_demo.py  real_demo_bypass.py
gateways/: ai_processing_gateway.py  base_gateway.py  context_gateway.py  corporate_llm_gateway.py  database_gateway.py  file_storage_gateway.py  gateway_registry.py  mvr_gateway.py  workflow_optimizer_gateway.py
genai-project-main/: 20251127-YRSN-quantum.md  4_01.md  4_1.md  DSPY_BUG_FIX_CHECKLIST.md  Gemini Strategic Analyst Prompt.txt  README.md  flow_1.md  flow_2.md  flow_3.md  function_list.md  how-to-start-demo.md  mrm_agents.md  mrm_mcp.md  mrm_timeline.md  orchestrators.md  prefix_list_s3.py  process_outline.md  scan-pdf.readme.md  settings.yaml  specs_desing_principles.md  specs_functionality.md
golden_answers_kb/: golden_answer_1756923453.json
infrastructure/: ARCHITECTURE_PATTERN.md  TECHNICAL_REFERENCE.md  aws_delegate.py  bedrock_delegate.py  connection_pool.py  credential_setup.py  diagnostics.py  infra_delegate.py  path_utils.py  rag_delegate.py  s3_delegate.py  session_management.py  settings_manager.py  standards.py  unified_credential_manager.py
interfaces/: cli.py  mcp.py  web.py
knowledge_resource_server/: interfaces.py  mcp_protocol.py  mcp_server.py  resource_manager.py  sources.py
knowledge_systems/: create_domain_workflow.py  domain_rag.py  enhanced_extraction.py  knowledge_manager.py  model_discovery_scheduler.py  mvr_integration_update.py  s3_first_domain_rag.py  stateless_s3_domain_rag.py  vector_manager.py
model_strategy/: project_model_selector.py
onboarding/: ADAPTIVE_LEARNING_RESTORED.md  BASELEARNER_TEMPERATURE_UPDATE.md  CRITICAL_CONSTRAINTS.md  ONBOARDING_ARCHITECTURE.md  README.md  README_ONBOARDING_KIT.md  YRSN_Comprehensive_Comparison_Framework.md  YRSN_Repository_Fragmentation_Analysis.md  YRSN_Titans_NestedLearning_Comparisons.md  YRSN_vs_2026_AI_Breakthroughs.md  YRSN_vs_DSPy_GEPA_MIvPro2_Comparison.md  app.py  build_domain_rag.py  cli_onboarding.py  config_generator.py  create_experience_rag.py  enhanced_cli_onboarding.py  enhanced_session_validator.py  enhanced_streamlit_onboarding_kit.py  implement_agent_learning.py  jupyter_corporate_setup.py  launcher.py  requirements.txt  requirements_onboarding_kit.txt  session_validator.py  settings_local_backup.yaml  shipping_manifest.yaml  start_onboarding.py  streamlit_app.py  template.settings.yaml  test_centralized_settings.py  test_chat_functionality.py  test_complete_ai_agent_system.py  test_document.txt  test_enhanced_workflow_optimizer.py  test_settings_refresh.py  test_workflow_optimizer_config.py  test_workflow_with_centralized_settings.py  universal_preflight.py  verify_shipping_package.py
paper_repository/: paper_1756923453.json
patent-whitepaper/: Hardware_Claims_Table.md  Method_Claims_Table.md  Production-Gaps.md  System_Claims_Table.md
prompts/: analyst_report_prompts.md  flow_mappings.json  section_view_prompts.md
qaz_20250321-main/: .gitignore  10-README_SIMPLE_DEMO.md  12-DEMO_READINESS_CHECKLIST.md  13-ANTI_SABOTAGE_GUIDE.md  20-HOW_TO_DEBUG_THIS_SYSTEM.md  21-MVR_DEMO_IMPROVEMENT_PLAN.md  BOTTOM_UP_EXECUTION_STRATEGY.md  DEPENDENCY_AWARE_EXECUTION_PLAN.md  IMPORTANT_START_HERE.md  INFRASTRUCTURE_ARCHITECTURE_REVIEW.md  KNOWLEDGE_BASE_SUMMARY.md  LOOP_PREVENTION_SAFEGUARDS.md  MASTER_TODO_LIST.md  NEEDS_CLARIFICATION.md  PDF_RAG_TEST_RESULTS.md  README.md  README_Streamlit_Demo.md  TOP_PRIORITY_FIXES_PROCESS.md  URGENT_SECURITY_ALERT.md  advanced.py  check_db_schema.py  comprehensive_mcp_demo.py  demo_execution_script.md  enhanced.py  generate_infra_pdf.py  install_py311_packages.py  prototype_intelligent_matching.py  py311_requirements.txt  requirements_mvr_demo_complete.txt  requirements_mvr_demo_minimal.txt  (+19 more)
(+1914 files in other folders)
