[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tidyllm"
version = "1.0.3"
description = "A lightweight, transparent AI/ML library focused on educational value and user sovereignty"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "TidyLLM Team"},
]
keywords = ["ai", "ml", "llm", "enterprise"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "requests",
    "pyyaml",
    "tlm>=1.0.1",
    "tidyllm-sentence>=0.1.0",
]

[tool.setuptools]
package-dir = {"tidyllm" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["tidyllm*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"tidyllm" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md", "admin/*", "data/*", "logs/*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]
full = [
    "tlm>=1.0.1",
    "tidyllm-sentence>=0.1.0",
]
ml = [
    "tlm>=1.0.1",
]
embeddings = [
    "tidyllm-sentence>=0.1.0",
]

[project.scripts]
tidyllm = "tidyllm.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/tidyllm"
Repository = "https://github.com/yourusername/tidyllm"